----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2003-06-23 Alexander M. Turek  <rabus@users.sourceforge.net>
    * lang/arabic-*.inc.php3, lang/czech-*.inc.php3, lang/finnish-*.inc.php3,
      lang/french-*.inc.php3, lang/georgian-utf-8.inc.php3,
      lang/lithuanian-*.inc.php3, lang/malay-*.inc.php3,
      lang/russian-*.inc.php3, lang/ukrainian-*.inc.php3: Checked all language
      files for incomplete arrays ($byteUnits, $day_of_week and $month).
    * libraries/common.lib.php3: Security fix against bad JS code.

2003-06-22 Robin Johnson <robbat2@users.sourceforge.net>
    * scripts/updatedocs.sh:
      - Cleanup scripts/updatedocs.sh (I use it elsewhere as well).
    * scripts/create-release.sh:
      - Moved to using updatedocs.sh for updating documentation.
      - Make tarring faster by re-arranging ops.

2003-06-21 Marc Delisle  <lem9@users.sourceforge.net>
    * sql.php3: typo in call to cleanup columns

2003-06-20 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_schema.php3: use PMA_getForeigners()
    * db_details_qbe.php3: undefined variable

2003-06-20 Garvin Hicking <me@supergarv.de>
    * db_details_importdocsql.php3: Will now NEVER reveal any filename
      the docSQL import isn't able to read. Can now only read contents
      of the 'docSQL' subdirectory and never be able to go higher than
      that level.

2003-06-19 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php3: analyzer for FOREIGN KEYS
    * libraries/sqlparser.lib.php3: bug 756861, DEFAULT 0 becomes DEFAULT0
    * libraries/display_tbl.lib.php3: use PMA_getForeigners()
    * libraries/relation.lib.php3: now PMA_getForeigners() gets also
      foreign keys defined in innnodb
    * tbl_select.php3: use PMA_getForeigners() also for innodb

2003-06-17 Michal Cihar  <nijel@users.sourceforge.net>
    * config.inc.php3: Fixed typo (s/'PMA_pdf_page'/'PMA_pdf_pages'/).
