@@ -5,6 +5,14 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2003-06-23 Garvin Hicking <me@supergarv.de>
+    * ChangeLog, Documentation.html, config.inc.php3, pdf_pages.php3,
+      css/phpmyadmin.css.php3, libraries/common.lib.php3, 
+      libraries/config_import.lib.php3, libraries/dom-drag.js,
+      libraries/functions.js: Added Patch #757907: DHTML WYSIWYG-control 
+      for PDF-relation setup. Based on DOM-drag.js, a library provided
+      by Aaron Boodman (youngpup.net).
+    
 2003-06-23 Alexander M. Turek  <rabus@users.sourceforge.net>
     * lang/arabic-*.inc.php3, lang/czech-*.inc.php3, lang/finnish-*.inc.php3,
       lang/french-*.inc.php3, lang/georgian-utf-8.inc.php3,
